--- a/docs/1 创建工程.md
+++ b/docs/1 创建工程.md
@@ -87,17 +87,21 @@ Startup/
  └─ startup_stm32f779nihx.s
 ```
 - 芯片上电后执行的第一段代码（汇编）
-- 主要功能：初始化堆栈指针、拷贝 .data 段、清零 .bss 段、设置中断向量表、跳转到 main()
+- 主要功能：
+    - 设置初始堆栈指针（SP）
+    - 设置初始程序计数器（PC），即 Reset_Handler
+    - 初始化中断向量表，将各异常/中断的 ISR 地址写入向量表
+    - 跳转到 C 运行库中的入口函数（该函数最终会调用 main()）
 
-### Drivers
+### Drivers（驱动库）
 
-- CMSIS (Cortex Microcontroller Software Interface Standard)
+- CMSIS (Cortex Microcontroller Software Interface Standard):
 ARM 官方定义的CPU抽象层，不同厂商的内核用同一套接口
 
-- HAL_Driver(Hardware Abstraction Layer)
+- HAL_Driver(Hardware Abstraction Layer): 
 ST写的外设驱动库，基于CMSIS
 
-### 链接文件
+### 链接脚本（Linker Script）
 ```text
 STM32F779NIHX_FLASH.ld
 STM32F779NIHX_RAM.ld
