--- a/docs/1 创建工程.md
+++ b/docs/1 创建工程.md
@@ -78,7 +78,7 @@ Src/
 - main.c: 应用程序入口，包含 main() 函数
 - stm32f7xx_hal_msp.c: HAL 底层初始化（GPIO、DMA、时钟等）
 - stm32f7xx_it.c: 中断服务函数实现
-- syscalls.c/sysmem.c: 用于支持 malloc / printf 等 C 库函数
+- syscalls.c/sysmem.c: C标准库的底层适配层，用于支持 malloc / printf 等 C 库函数
 - system_stm32f7xx.c: 系统时钟配置（PLL、AHB、APB）
 
 ### Startup（启动文件）
@@ -94,12 +94,9 @@ Startup/
     - 跳转到 C 运行库中的入口函数（该函数最终会调用 main()）
 
 ### Drivers（驱动库）
-
-- CMSIS (Cortex Microcontroller Software Interface Standard):
-ARM 官方定义的CPU抽象层，不同厂商的内核用同一套接口
-
-- HAL_Driver(Hardware Abstraction Layer): 
-ST写的外设驱动库，基于CMSIS
+ 
+- CMSIS (Cortex Microcontroller Software Interface Standard): ARM 官方定义的CPU抽象层，不同厂商的内核用同一套接口
+- HAL_Driver(Hardware Abstraction Layer): 外设驱动库，基于CMSIS
 
 ### 链接脚本（Linker Script）
 ```text
