--- a/docs/2 录音与播放.md
+++ b/docs/2 录音与播放.md
@@ -9,7 +9,7 @@
 
 - SAI（Serial Audio Interface，串行音频接口） 在 STM32 中被广泛用于连接外部音频设备。通过 SAI，MCU 可以与放大器、ADC、DAC、音频处理器等外部音频芯片进行高效的数据交互。
 
-![alt text](<imgs/2 录音与播放-流程图.png>)
+![alt text](<imgs/2 录音与播放-1-流程图.png>)
 
 在录音流程中，数字麦克风采集到的 PDM 数据 送入 DFSDM 模块，由 DFSDM 转换为 PCM 数据流。应用层通过 DMA + 回调函数 的方式，将转换后的 PCM 数据拷贝到用户指定的录音缓冲区，从而完成音频录制。
 
@@ -19,7 +19,7 @@
 
 ### 添加依赖代码
 #### 1. BSP文件
-![alt text](image.png)
+![alt text](<imgs/2 录音与播放-2-BSP文件目录.png>)
 
 - wm8994：音频Codec
 - audio：音频录制与播放的BSP实现
@@ -28,7 +28,7 @@
 #### 2. HAL文件
 DFSDM 与 SAI 外设可通过 CubeMX 启用，以自动生成对应 HAL 文件。
 
-![alt text](<imgs/2 录音与播放-2-配置代码生成.png>)
+![alt text](<imgs/2 录音与播放-3-配置代码生成.png>)
 
 由于 音频初始化完全由 BSP 完成，在 CubeMX 的 Project Manager 中不勾选生成初始化代码。
 
