--- a/docs/6 唤醒词检测.md
+++ b/docs/6 唤醒词检测.md
@@ -1,13 +1,15 @@
-## Porcupine简介
+# 添加Porcupine唤醒词检测功能
+
+## 1. Porcupine简介
 
 Porcupine 是 Picovoice 提供的一款高精度、轻量级 的唤醒词（Wake Word）检测引擎，体积小、计算效率高，适用于IoT和嵌入式设备。它支持多种硬件和操作系统平台，并提供 包括中文在内的多语言支持。非商用项目开发者可以免费使用 Porcupine 的预训练唤醒词和自定义唤醒词。
 
 
-## 1. 官方MCU使用文档
+## 2. 官方MCU使用文档
 
 https://picovoice.ai/docs/quick-start/porcupine-microcontroller/
 
-## 遇到的问题
+## 3. 遇到的问题
 
 - 使用 Porcupine v4.0
 	- 官方示例中的 中文唤醒词模型（pv_params.h）：初始化失败，返回 PV_STATUS_INVALID_ARGUMENT
@@ -17,7 +19,7 @@ https://picovoice.ai/docs/quick-start/porcupine-microcontroller/
 	- 官方示例中的中文唤醒词 可以正常初始化并工作
 
 
-## 唤醒词检测流程实现
+## 4. 唤醒词检测流程实现
 
 ```c
 uint8_t wakeword_detection(){
